Added source of bid to bidresponses

--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -36,7 +36,10 @@
     "from util import hand_to_str\n",
     "from deck52 import random_deal\n",
     "from sample import Sample\n",
-    "import conf"
+    "import conf\n",
+    "import numpy as np\n",
+    "\n",
+    "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n"
    ]
   },
   {
@@ -49,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_model/gib21-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\scripts/training/bidding/model/bidding-1248000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/gib21_info_model/gib21_info-500000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
@@ -78,13 +81,26 @@
    "execution_count": 3,
    "id": "19dbfeb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'call': '4H', 'insta_score': 0.6496},\n",
+       " {'call': 'PASS', 'insta_score': 0.1713},\n",
+       " {'call': 'X', 'insta_score': 0.1437}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# East deals, EW vulnerable.\n",
-    "vuln_ns, vuln_ew = True, True\n",
+    "vuln_ns, vuln_ew = False, False\n",
     "\n",
     "# you sit West and hold:\n",
-    "hand = 'T9.AQT87.873.653'\n",
+    "hand = '6.AKJT82.762.K63'\n",
     "\n",
     "# the auction goes:\n",
     "# (a few words about 'PAD_START':\n",
@@ -93,7 +109,11 @@
     "# if East deals we have one pad (because North is skipped)\n",
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
-    "auction = ['PAD_START', \"PASS\", \"1H\", \"X\"]\n",
+    "auction = ['1D', '3S']\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, -1, -1, sampler, False)\n",
+    "\n",
+    "bid = bot_bid.bid(auction)\n",
+    "bid.to_dict()['candidates']\n",
     "\n",
     "# what's your bid?"
    ]
@@ -107,11 +127,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '4H',\n",
-       "  'insta_score': 0.4037,\n",
-       "  'expected_score': 326,\n",
-       "  'adjustment': 20},\n",
-       " {'call': '2H', 'insta_score': 0.5911, 'expected_score': -7, 'adjustment': 30}]"
+       "[{'call': 'PASS', 'insta_score': 0.7673},\n",
+       " {'call': '6H', 'insta_score': 0.2015}]"
       ]
      },
      "execution_count": 4,
@@ -120,8 +137,7 @@
     }
    ],
    "source": [
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, -1, -1, sampler, False)\n",
-    "\n",
+    "auction = ['1D', '3S', '4H', '4S', '5H', 'PASS']\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']"
    ]
@@ -132,13 +148,6 @@
    "id": "602468ef",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Bid not valid 3H insta_score: 0.9810969829559326\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -166,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.0153}]"
+       "[{'call': 'PASS', 'insta_score': 0.7176}, {'call': '6H', 'insta_score': 0.183}]"
       ]
      },
      "execution_count": 6,
@@ -213,7 +222,26 @@
     {
      "data": {
       "text/plain": [
-       "['T9.AQT8x.8xx.xxx Q8xxxx..Txxx.Qxx Ax.J9xxxx.AQ.J98 KJx.Kx.KJ9x.AKTx']"
+       "['x.AKJT8x.xxx.Kxx Jxxxx.x.QTxx.9xx AQ9.Q9xxx.9.QTxx KT8x.x.AKJ8x.AJ8',\n",
+       " 'x.AKJT8x.xxx.Kxx 98xxx.x.J98x.Q9x AQT.Qxxxx.Tx.ATx KJxx.9.AKQx.J8xx',\n",
+       " 'x.AKJT8x.xxx.Kxx Txxx.x.QJT9x.xxx KJ98.Q9xxx.K.Q9x AQxx.x.A8xx.AJT8',\n",
+       " 'x.AKJT8x.xxx.Kxx 98xxx.x.KQ98.9xx AKTx.Q9xxx.x.QTx QJx.x.AJTxx.AJ8x',\n",
+       " 'x.AKJT8x.xxx.Kxx A98xx.x.8xx.J8xx KQx.Q9xxx.K9.9xx JTxx.x.AQJTx.AQT',\n",
+       " 'x.AKJT8x.xxx.Kxx K9xxx.xx.QTx.Q9x A8x.Q9xxx.K8.JT8 QJTx..AJ9xx.Axxx',\n",
+       " 'x.AKJT8x.xxx.Kxx QTxxxx.xx.Tx.9xx AJ9.Q9xxx.Q9x.AT K8x..AKJ8x.QJ8xx',\n",
+       " 'x.AKJT8x.xxx.Kxx xxx.x.98xx.J9xxx AKT8.Q9xxx.KJT.T QJ9xx.x.AQx.AQ8x',\n",
+       " 'x.AKJT8x.xxx.Kxx QT9xxx.9x.x.QJTx AJ8x.Qxxxx.KT9.x Kx..AQJ8xx.A98xx',\n",
+       " 'x.AKJT8x.xxx.Kxx AT98xxx.x.8x.xxx QJx.Q9xxx.KJ.QJ8 Kx.x.AQT9xx.AT9x',\n",
+       " 'x.AKJT8x.xxx.Kxx xxx.x.J98x.QJxxx AJ8x.Q9xxxx.Ax.9 KQT9x..KQTx.AT8x',\n",
+       " 'x.AKJT8x.xxx.Kxx Q9xxx.Q.T8x.JTxx 8.9xxxx.KQJ9.A98 AKJTxx.x.Axx.Qxx',\n",
+       " 'x.AKJT8x.xxx.Kxx Txxx.Qxx.9x.QJxx AJxx.9xxx.KQJ.98 KQ98..AT8xx.ATxx',\n",
+       " 'x.AKJT8x.xxx.Kxx JT98x.9x.8.QJT9x Kxxx.Qxxx.AQT.xx AQx.x.KJ9xxx.A8x',\n",
+       " 'x.AKJT8x.xxx.Kxx T9xx..QT98.Q8xxx AQ8.9xxxxx.Kx.AT KJxxx.Q.AJxx.J9x',\n",
+       " 'x.AKJT8x.xxx.Kxx QJ8x.x.JT8xx.Q8x T9x.Q9xxxx.AK.Jx AKxxx..Q9x.AT9xx',\n",
+       " 'x.AKJT8x.xxx.Kxx 98xxx.Qx.xx.QJTx AQJTx.9xxx.A8.9x Kx.x.KQJT9x.A8xx',\n",
+       " 'x.AKJT8x.xxx.Kxx Q9xxx.x.AJ8x.Txx AJT8x.Q9xxx.x.QJ Kx.x.KQT9x.A98xx',\n",
+       " 'x.AKJT8x.xxx.Kxx QJ8xxx.9xx.8.Txx Txx.Qxxx.AKQx.Jx AK9..JT9xx.AQ98x',\n",
+       " 'x.AKJT8x.xxx.Kxx J8xxxx.xxx.9.98x AK.Q9xx.QJTx.Txx QT9x..AK8xx.AQJx']"
       ]
      },
      "execution_count": 7,
@@ -242,11 +270,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "T9.AQT8x.8xx.xxx QJ8xx.xxx.xxx.9x Axxx.Kxx.A9x.Jxx Kx.J9.KQJT.AKQT8\n"
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\github\\ben\\src\\examples\\Bidding.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# we got some samples above. if we want more, we can always get more\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sample_hands \u001b[39m=\u001b[39m bot_bid\u001b[39m.\u001b[39msample_hands([\u001b[39m'\u001b[39m\u001b[39mPAD_START\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mPAD_START\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mPAD_START\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m2N\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPASS\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m3C\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPASS\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m3D\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(sample_hands\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(sample_hands\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m0\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m1\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m2\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m3\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'shape'"
      ]
     }
    ],
@@ -279,24 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fc27ca79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['K9532.K8.J4.KJT4',\n",
-       " 'A.J963.Q9832.Q96',\n",
-       " 'QT87.A75.T65.832',\n",
-       " 'J64.QT42.AK7.A75']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hands = random_deal().split()\n",
     "hands # N, E, S, W"
@@ -304,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d480cbba",
    "metadata": {},
    "outputs": [],
@@ -314,40 +331,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7d77351a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PASS',\n",
-       " 'PASS',\n",
-       " 'PASS',\n",
-       " '1C',\n",
-       " 'PASS',\n",
-       " '1D',\n",
-       " 'PASS',\n",
-       " '1H',\n",
-       " 'PASS',\n",
-       " '3H',\n",
-       " 'PASS',\n",
-       " '3N',\n",
-       " 'PASS',\n",
-       " '4H',\n",
-       " 'PASS',\n",
-       " 'PASS',\n",
-       " 'X',\n",
-       " 'PASS',\n",
-       " 'PASS',\n",
-       " 'PASS']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "auction = []  # since North deals, we don't need any 'PAD_START'\n",
     "\n",
