Fixed error in sampling and model generation possible for single system

--- a/src/examples/OpeningLead-hf.ipynb
+++ b/src/examples/OpeningLead-hf.ipynb
@@ -120,8 +120,8 @@
     }
    ],
    "source": [
-    "!pip install --upgrade tensorflow[and-cuda]\n",
-    "!pip install -q huggingface_hub"
+    "%pip install --upgrade tensorflow[and-cuda]\n",
+    "%pip install -q huggingface_hub"
    ]
   },
   {
@@ -214,8 +214,6 @@
     }
    ],
    "source": [
-    "#models = Models.from_conf(conf.load('./config/default.conf'),'..')   # loading neural networks\n",
-    "#sampler = Sample.from_conf(conf.load('./config/default.conf'), False)  # Load sampling strategies\n",
     "import huggingface_hub\n",
     "import os\n",
     "lead_id=\"AIBridgeEngine/Ben-3B-Lead-v0.1\"\n",
