Added new parameter for minimum number of samples in the bidding

--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\scripts/training/bidding/model/bidding-1248000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_info_model/gib21_info-500000\n",
+      "INFO:tensorflow:Restoring parameters from D:\\github\\ben\\UCBC 2024\\Models\\bidding-3233000\n",
+      "INFO:tensorflow:Restoring parameters from D:\\github\\ben\\UCBC 2024\\Models\\binfo-286000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lefty_model/lefty-1000000\n",
@@ -85,9 +85,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '4H', 'insta_score': 0.6496},\n",
-       " {'call': 'PASS', 'insta_score': 0.1713},\n",
-       " {'call': 'X', 'insta_score': 0.1437}]"
+       "[{'call': '4H',\n",
+       "  'insta_score': 0.2556,\n",
+       "  'expected_score': 186,\n",
+       "  'adjustment': 13},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.6695,\n",
+       "  'expected_score': 33,\n",
+       "  'adjustment': 33}]"
       ]
      },
      "execution_count": 3,
@@ -110,7 +115,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = ['1D', '3S']\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, -1, -1, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -127,8 +132,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.7673},\n",
-       " {'call': '6H', 'insta_score': 0.2015}]"
+       "[{'call': '6H', 'insta_score': 0.132, 'expected_score': 557, 'adjustment': 7},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.8391,\n",
+       "  'expected_score': 409,\n",
+       "  'adjustment': 42}]"
       ]
      },
      "execution_count": 4,
@@ -175,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.7176}, {'call': '6H', 'insta_score': 0.183}]"
+       "[{'call': 'PASS', 'insta_score': 0.9995}]"
       ]
      },
      "execution_count": 6,
@@ -222,26 +230,11 @@
     {
      "data": {
       "text/plain": [
-       "['x.AKJT8x.xxx.Kxx Jxxxx.x.QTxx.9xx AQ9.Q9xxx.9.QTxx KT8x.x.AKJ8x.AJ8',\n",
-       " 'x.AKJT8x.xxx.Kxx 98xxx.x.J98x.Q9x AQT.Qxxxx.Tx.ATx KJxx.9.AKQx.J8xx',\n",
-       " 'x.AKJT8x.xxx.Kxx Txxx.x.QJT9x.xxx KJ98.Q9xxx.K.Q9x AQxx.x.A8xx.AJT8',\n",
-       " 'x.AKJT8x.xxx.Kxx 98xxx.x.KQ98.9xx AKTx.Q9xxx.x.QTx QJx.x.AJTxx.AJ8x',\n",
-       " 'x.AKJT8x.xxx.Kxx A98xx.x.8xx.J8xx KQx.Q9xxx.K9.9xx JTxx.x.AQJTx.AQT',\n",
-       " 'x.AKJT8x.xxx.Kxx K9xxx.xx.QTx.Q9x A8x.Q9xxx.K8.JT8 QJTx..AJ9xx.Axxx',\n",
-       " 'x.AKJT8x.xxx.Kxx QTxxxx.xx.Tx.9xx AJ9.Q9xxx.Q9x.AT K8x..AKJ8x.QJ8xx',\n",
-       " 'x.AKJT8x.xxx.Kxx xxx.x.98xx.J9xxx AKT8.Q9xxx.KJT.T QJ9xx.x.AQx.AQ8x',\n",
-       " 'x.AKJT8x.xxx.Kxx QT9xxx.9x.x.QJTx AJ8x.Qxxxx.KT9.x Kx..AQJ8xx.A98xx',\n",
-       " 'x.AKJT8x.xxx.Kxx AT98xxx.x.8x.xxx QJx.Q9xxx.KJ.QJ8 Kx.x.AQT9xx.AT9x',\n",
-       " 'x.AKJT8x.xxx.Kxx xxx.x.J98x.QJxxx AJ8x.Q9xxxx.Ax.9 KQT9x..KQTx.AT8x',\n",
-       " 'x.AKJT8x.xxx.Kxx Q9xxx.Q.T8x.JTxx 8.9xxxx.KQJ9.A98 AKJTxx.x.Axx.Qxx',\n",
-       " 'x.AKJT8x.xxx.Kxx Txxx.Qxx.9x.QJxx AJxx.9xxx.KQJ.98 KQ98..AT8xx.ATxx',\n",
-       " 'x.AKJT8x.xxx.Kxx JT98x.9x.8.QJT9x Kxxx.Qxxx.AQT.xx AQx.x.KJ9xxx.A8x',\n",
-       " 'x.AKJT8x.xxx.Kxx T9xx..QT98.Q8xxx AQ8.9xxxxx.Kx.AT KJxxx.Q.AJxx.J9x',\n",
-       " 'x.AKJT8x.xxx.Kxx QJ8x.x.JT8xx.Q8x T9x.Q9xxxx.AK.Jx AKxxx..Q9x.AT9xx',\n",
-       " 'x.AKJT8x.xxx.Kxx 98xxx.Qx.xx.QJTx AQJTx.9xxx.A8.9x Kx.x.KQJT9x.A8xx',\n",
-       " 'x.AKJT8x.xxx.Kxx Q9xxx.x.AJ8x.Txx AJT8x.Q9xxx.x.QJ Kx.x.KQT9x.A98xx',\n",
-       " 'x.AKJT8x.xxx.Kxx QJ8xxx.9xx.8.Txx Txx.Qxxx.AKQx.Jx AK9..JT9xx.AQ98x',\n",
-       " 'x.AKJT8x.xxx.Kxx J8xxxx.xxx.9.98x AK.Q9xx.QJTx.Txx QT9x..AK8xx.AQJx']"
+       "['x.AKJT8x.xxx.Kxx T98xx.x.T98x.T9x AJxx.Q9xxxx.KJ.x KQx..AQxx.AQJ8xx 0.21341',\n",
+       " 'x.AKJT8x.xxx.Kxx 8xxxx.xx.J9x.xxx Ax.Q9xxx.AT8x.T8 KQJT9..KQx.AQJ9x 0.19239',\n",
+       " 'x.AKJT8x.xxx.Kxx T9xx.9.J8xx.8xxx Kxx.Qxxxxx.A9.JT AQJ8x..KQTx.AQ9x 0.07737',\n",
+       " 'x.AKJT8x.xxx.Kxx 8xxx.x.J8xx.J9xx ATxx.Q9xxx.9x.Ax KQJ9.x.AKQT.QT8x 0.03372',\n",
+       " 'x.AKJT8x.xxx.Kxx T9xxx.x.9xx.Txxx Q8x.Q9xxx.AQ8.Jx AKJx.x.KJTx.AQ98 0.02312']"
       ]
      },
      "execution_count": 7,
@@ -270,22 +263,35 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\github\\ben\\src\\examples\\Bidding.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# we got some samples above. if we want more, we can always get more\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sample_hands \u001b[39m=\u001b[39m bot_bid\u001b[39m.\u001b[39msample_hands([\u001b[39m'\u001b[39m\u001b[39mPAD_START\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mPAD_START\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mPAD_START\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m2N\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPASS\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m3C\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mPASS\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m3D\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(sample_hands\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(sample_hands\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/github/ben/src/examples/Bidding.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m0\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m1\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m2\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mhand_to_str(sample_hands[i,\u001b[39m \u001b[39m\u001b[39m3\u001b[39m,\u001b[39m \u001b[39m:])\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "x.AKJT8x.xxx.Kxx AQxx.xxx.J8x.Jxx T9xxx.x.T9x.T98x KJ8.Q9x.AKQx.AQx\n",
+      "x.AKJT8x.xxx.Kxx Q9xx.Q9x.K98.xxx T8xxx.x.Txx.JT8x AKJ.xxx.AQJx.AQ9\n",
+      "x.AKJT8x.xxx.Kxx K8xx.xx.Txx.QJT9 QTxxx.9x.8x.xxxx AJ9.Qxx.AKQJ9.A8\n",
+      "x.AKJT8x.xxx.Kxx QJ8x.9x.J8x.QJ98 T9xxx.xx.Q9x.Txx AKx.Qxx.AKTx.Axx\n",
+      "x.AKJT8x.xxx.Kxx KQ9x.9xx.8xxx.Qx JTxxx.xx.T.JT9xx A8x.Qx.AKQJ9.A8x\n",
+      "x.AKJT8x.xxx.Kxx KJxx.9x.8x.QT9xx QT9xx.xx.T9x.J8x A8x.Qxx.AKQJx.Ax\n",
+      "x.AKJT8x.xxx.Kxx Q9xx.xx.J9x.Q8xx JT8xx.9x.Q8.J9xx AKx.Qxx.AKTxx.AT\n",
+      "x.AKJT8x.xxx.Kxx KTxx.9xx.Q98.Txx J98xx.xx.xx.QJ8x AQx.Qx.AKJTx.A9x\n",
+      "x.AKJT8x.xxx.Kxx KJxx.xxx.J98.Txx T98xx.x.Tx.QJ98x AQx.Q9x.AKQxx.Ax\n",
+      "x.AKJT8x.xxx.Kxx J9xx.xx.K8x.QJTx QT8xxx.xxx.9x.9x AK.Q9.AQJTx.A8xx\n",
+      "x.AKJT8x.xxx.Kxx JTxx.xx.K8x.QT9x Q98xxx.9xx.JTx.x AK.Qx.AQ9x.AJ8xx\n",
+      "x.AKJT8x.xxx.Kxx K9xx.9xx.9xx.Q9x QJT8xx.xx.JT.8xx Ax.Qx.AKQ8x.AJTx\n",
+      "x.AKJT8x.xxx.Kxx KT8x.9x.Q98x.JTx QJ9xxx.xxx.T.9xx Ax.Qx.AKJxx.AQ8x\n",
+      "x.AKJT8x.xxx.Kxx QT9x.9xx.Qxx.J9x KJ8xxx.xx.98x.8x Ax.Qx.AKJT.AQTxx\n",
+      "x.AKJT8x.xxx.Kxx Jxxx.9xxx.xx.QJx QT98x.x.Q9x.T9xx AKx.Qx.AKJT8.A8x\n",
+      "x.AKJT8x.xxx.Kxx KQJTxx.xx.98x.8x 98xx.xxx.Jx.Jxxx Ax.Q9.AKQTx.AQT9\n",
+      "x.AKJT8x.xxx.Kxx J8xx.9xx.T8x.ATx 9xxx.Qxx.9x.J9xx AKQT.x.AKQJx.Q8x\n"
      ]
     }
    ],
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands = bot_bid.sample_hands(['PAD_START', 'PAD_START', 'PAD_START','2N','PASS','3C','PASS','3D'])\n",
-    "print(sample_hands.shape[0])\n",
+    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands(['PAD_START', 'PAD_START', 'PAD_START','2N','PASS','3C','PASS','3D'])\n",
+    "\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
    ]
@@ -310,10 +316,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fc27ca79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['JT7.AJ62.T9.JT87',\n",
+       " 'AQ9832.T87.876.9',\n",
+       " 'K4.Q43.AQ432.Q65',\n",
+       " '65.K95.KJ5.AK432']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hands = random_deal().split()\n",
     "hands # N, E, S, W"
@@ -321,20 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d480cbba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([False, False], hand, models, -1, -1, sampler, False) for hand in hands]"
+    "bidder_bots = [BotBid([False, False], hand, models, sampler, False) for hand in hands]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7d77351a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PASS', '2S', '3D', '3S', 'PASS', 'PASS', 'PASS']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auction = []  # since North deals, we don't need any 'PAD_START'\n",
     "\n",
