--- a/src/examples/bidding_info.ipynb
+++ b/src/examples/bidding_info.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ../scripts/training/bidding_info/model/binfo-51000\n"
+      "INFO:tensorflow:Restoring parameters from ../models/21gf_info/binfo_21gf-500000\n"
      ]
     }
    ],
@@ -23,7 +23,7 @@
     "\n",
     "from nn.bid_info import BidInfo\n",
     "\n",
-    "binfo = BidInfo('../scripts/training/bidding_info/model/binfo-51000')\n"
+    "binfo = BidInfo('../models/21gf_info/binfo_21gf-500000')\n"
    ]
   },
   {
@@ -51,9 +51,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_hcp:[[7.1452055 6.60819   7.750942 ]]\n",
-      "c_shp:[[3.0072935 4.0193367 3.8959231 1.9485438 3.3278406 3.8327937 3.811037\n",
-      "  2.042756  1.9822656 2.2641473 2.1918073 6.620554 ]]\n"
+      "c_hcp:[[6.161647 6.62594  9.480374]]\n",
+      "c_shp:[[3.4721162 2.9833052 3.8504107 2.675741  3.4730241 3.2105064 3.6407146\n",
+      "  2.5272415 1.2402604 4.425272  1.6998398 5.7104445]]\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6.7329454 13.4547615 14.350583 ]]\n"
+      "[[ 6.9078207 18.210526   9.56655  ]]\n"
      ]
     }
    ],
@@ -112,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[16.387121  14.462275   5.316929 ]\n",
-      " [16.921743  15.175928   4.2989645]]\n"
+      "[[20.275938   8.96347    6.9984803]\n",
+      " [21.049858   8.790658   6.693444 ]]\n"
      ]
     }
    ],
