--- a/src/examples/bidding_info_h5.ipynb
+++ b/src/examples/bidding_info_h5.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "from nn.bid_info_tf2 import BidInfo\n",
     "\n",
-    "binfo = BidInfo('../scripts/training/bidding_info/models/binfo.h5')"
+    "binfo = BidInfo('../models/binfo.h5')"
    ]
   },
   {
@@ -71,14 +71,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 1s/step\n",
-      "[[[-0.32837248 -0.5116618  -0.54694766]]]\n",
-      "[[[ 0.08129565  0.2540605   0.27706254 -0.57342     0.06791693\n",
-      "    0.23926863  0.24929005 -0.47755498 -0.82254684 -0.67536217\n",
-      "   -0.22108601  1.9178935 ]]]\n",
-      "c_hcp:[[8.68651  7.953353 7.812209]]\n",
-      "c_shp:[[3.3922675 3.6946058 3.7348595 2.246515  3.3688545 3.66872   3.6862576\n",
-      "  2.4142787 1.8105431 2.0681162 2.8630996 6.6063137]]\n"
+      "[[[-0.6526151  -0.571701   -0.39639312]]]\n",
+      "[[[ 0.05210641  0.31131235  0.34398574 -0.50948286  0.04333303\n",
+      "    0.23772155  0.37316796 -0.60478735 -0.68011457 -0.57150507\n",
+      "   -0.2986324   1.9259543 ]]]\n",
+      "c_hcp:[[7.3895397 7.713196  8.414428 ]]\n",
+      "c_shp:[[3.3411863 3.7947965 3.851975  2.358405  3.3258328 3.6660128 3.903044\n",
+      "  2.1916223 2.0597997 2.249866  2.7273932 6.62042  ]]\n"
      ]
     }
    ],
@@ -113,8 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "[[[ 8.237265 14.248348  9.283164]]]\n"
+      "[[[ 9.430501 11.7272    9.191472]]]\n"
      ]
     }
    ],
@@ -142,9 +140,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 1s/step\n",
-      "[[[12.657282  16.3292     5.673679 ]\n",
-      "  [13.692372  15.455392   6.6313396]]]\n"
+      "[[[12.480727  14.243022   6.833748 ]\n",
+      "  [12.542816  14.705857   7.3292007]]]\n"
      ]
     }
    ],
@@ -172,8 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "[[[11.959903 11.428694 11.307681]]]\n"
+      "[[[11.5817175 11.449823  11.576882 ]]]\n"
      ]
     }
    ],
